# trader

./: .gitignore  main.py  pyproject.toml  为系统新建知识库.md
config/: settings.yaml.example
docs/: data-sync-readme.md
knowledge-base/: system-overview.md
src/: config.py
src/data/: ma_calculator.py  market_api_client.py  market_repo.py  mysql_client.py  rate_limiter.py  schema.sql
src/data/sync/: __init__.py  base.py  daily_info_syncer.py  dc_concept_syncer.py  dc_daily_syncer.py  dc_index_syncer.py  index_daily_syncer.py  limit_cpt_syncer.py  limit_list_syncer.py  limit_step_syncer.py  stock_basic_syncer.py  stock_daily_syncer.py  trade_cal_syncer.py
src/server/: app.py
src/server/routes/: market.py
