[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evolving-trader"
version = "0.1.0"
description = "A-share market data sync and query service"
requires-python = ">=3.11"
dependencies = [
    "tushare>=1.4.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "PyMySQL>=1.1.0",
    "SQLAlchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
evolving-trader = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
